apps/dev/syncthing/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:a9cjErzt/V4rZQUEHJPSUMzuXlKfbbUfVwXnLG+W0KoVgALT,iv:Pp+Tdqng0miVe/dFqrm27JKbzTPxhA/h/pzG+SZNulY=,tag:6cyDHarP596QnOf5vqEB/w==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:VnPZZdA7kLfSUiun8ol8D/+FWFcdsxR/MPqAS2mxOX/q8Q==,iv:URme9i6pbW5TwVRbyXORjGiQgeqQOzHZvuHARB2tenE=,tag:HSY0iXJfW+8MQWz+BQ5Bbg==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Kd/FO9PoUeqerPo+6TLs5IWayQ01dNaj+BA=,iv:2/Js7MOMu24YJJ+3g5gPPrvmacKtW0NbN0gSYSgxSMU=,tag:dmq4n6DhQwTW+Z7L76NEyg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: syncthing-production
    namespace: syncthing
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Ep0agh3fGrLZy20+sCQ/rneum6LK0m7jjUrWtVvYQINXY4dTsZVhpZiGKsY=,iv:HcA35igyl3s62Rdar7brmCCNlgndrOcyw5FpVN0orEg=,tag:+sARmE6BMhdAXpCe1xjZuQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: syncthing-web
              namespace: syncthing
    tls:
        domains:
            - main: ENC[AES256_GCM,data:THSYiabz5Hgni8wANzWruxvmHj7n8mjIu8c=,iv:TU5nc50Gv+jlBecvN7znjb5lolALLIaTWElrGCpEuDM=,tag:Ujzy/V+ZmDrCwQYL16q9lQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:k6E7EvUtcD0F/imfxQy5QIIrGBz+dLFqJLM6,iv:fs63mEEfSCTc+ici5v1qijQ0YgKrNV4MXhD6yQcEzns=,tag:sSTE67b/Mh48m/Dsq4N5vA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: syncthing-web-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvZWFiUUdkN0N4cm53ZmYz
[...]
            DOU2oKdvfeZCdFb29IqsJxjb6QoZHkcUoO3CW1X1A4CXKoYkILn7rg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-06T20:56:03Z"
    mac: ENC[AES256_GCM,data:5FfDJk7FTCCwMSxSRixOb7BzsTdjJ3sBtwNDjdRm6WfCvEqY6qLkkNh5+zj4UAqJc983hgDOpTExzd7z/uS12LyrpcwBmYRNUHtnOMVNBNYPzVNU8Hi3eJHJ1fQRwmzLSZVIfHq5JX0djIKwuqRtgY/g7FJG5scWKekZndt4m20=,iv:Mo826fZ/eRuymKSHJ4Gv+RPocxY2LrXMixG61nJo/y8=,tag:jTLhI8rlNxkPGEBEr9X4Wg==,type:str]
    pgp:
        - created_at: "2024-10-06T20:56:03Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9GgTaCQh2FKNGZc/mFMh2lZ+KcPfTwFfs1dLei8VS+GxV
[...]
            =QLQC
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
