apps/dev/syncthing/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:FHXMQXCVRnstxCkur7PnrdT+MEoqFePrkhjeqDMIgVMemBpV,iv:lbedxz27kretrVT7bcNOL9yfQCCSbC2LjV0sX8bdt3s=,tag:JHMBmKoG3CTwxmBU9+oKRA==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:WHgHIreSRyXZ0qVXfI++H69wsn+9PqAdrPKez3EKcbZcGA==,iv:dqFB1NVRnb/R0vyC4c7mMC4JdiQtPxm05uk7ERw8akk=,tag:O3AF2cP1MKmuKQREBZ4OVw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:EtfExYSO/5lX5uHrOg8GiTo3V7NQkpXS+EA=,iv:Lg9ndMsBV5PAEX0x23RWPEyGTz8kcLAwqF8R0m8hYIA=,tag:sQOhXeLbR8lJck/icxWsLw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: syncthing-staging
    namespace: syncthing
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:goX5v3qC59E6Sm+1gQR775EhT/wYtMsOZ0HbreqX8fJMkqjeKjaYtevy1Mc=,iv:fYcppT9E6van1YNdEw7bgX4uIXMIukTPGZn0JEUyYX8=,tag:lxvOVNvv/8q8NwTlnMxlcA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: syncthing-web
              namespace: syncthing
    tls:
        domains:
            - main: ENC[AES256_GCM,data:/nZXEcYZ0KbGA2y0PnaQX65ynbH+Qz7fEVk=,iv:5Skl4Cbe3V2H8pbYKDTIaxSyiZUJZNDxPOuVSBYSP5Y=,tag:h2DCpK/LuEif9S0KSJlbJA==,type:str]
              sans:
                - ENC[AES256_GCM,data:e3y2lUotzUxj+b+NpUupBb5x0swyqyxARWqm,iv:gVelZBKcX2RUVtaJowU0gy1tBg52SjxI4fdO7nHSAIg=,tag:u1NXRm3Kwy0t94agLM0G2w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: syncthing-web-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5a3RSOXYxVjZ5ZzMxanV1
[...]
            klVvOo4lsw8VXD9/H5cxWQgVBhy85b/bAso6LVPH2asrJOCJTIqemQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-06T20:57:06Z"
    mac: ENC[AES256_GCM,data:c07CC4zyzFg5EAcsaVuZuP4sJADvyFErKxbxrS+78Ym+rVeT6w3iCvG7k5MEiTTB58fZIJD1kbmWoGhHOEJF797yij61wD3NcXbyTzRn6fUEd8j+Ab8ae4dDFMgkFQAFxg2tKXTE9UtNNgAPjRW7gvQvRj3fmjR64IZ2t3fdlsA=,iv:xhsSCSYV/dBQ5ttfwMwYl59KPLs54GBezi4fcQZCsDY=,tag:nYN9onfzNPfGGRfN5yif6Q==,type:str]
    pgp:
        - created_at: "2024-10-06T20:57:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//fpoC1Ki7If6Kpd8DGefd3Lq62g3CiriLGzpzi2TNQxsa
[...]
            =A32Y
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
